upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -244,49 +244,37 @@
 
         <div class="features__grid">
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://img5.pic.in.th/file/secure-sv1/icons/palette.png" alt="" style="width:28px;height:28px;object-fit:contain">
-            </div>
+            <div class="features__icon" aria-hidden="true">📶</div>
             <h3 class="features__title" data-i18n-key="feat_1_t">ปรับโทนสีได้กว้าง</h3>
             <p class="features__desc" data-i18n-key="feat_1_d">เหลืองอ่อน → ทองแดงแดง คุมด้วยอุณหภูมิ/กระแส/อัตราส่วน <strong>Cu:Zn</strong></p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://img5.pic.in.th/file/secure-sv1/icons/shine.png" alt="" style="width:28px;height:28px;object-fit:contain">
-            </div>
+            <div class="features__icon" aria-hidden="true">📏</div>
             <h3 class="features__title" data-i18n-key="feat_2_t">ผิวเรียบสม่ำเสมอ</h3>
             <p class="features__desc" data-i18n-key="feat_2_d">คลุมพื้นผิวดี เหมาะงานตกแต่งคุณภาพสูงและงานประกอบต่อ</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://img5.pic.in.th/file/secure-sv1/icons/thermo.png" alt="" style="width:28px;height:28px;object-fit:contain">
-            </div>
+            <div class="features__icon" aria-hidden="true">🎯</div>
             <h3 class="features__title" data-i18n-key="feat_3_t">อุ่นแล้ววิ่งดี</h3>
             <p class="features__desc" data-i18n-key="feat_3_d">เดินงานได้ทั้งอุ่น/เย็น แนะนำ <strong>50–55 °C</strong> เพื่อคุณภาพผิว</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://img5.pic.in.th/file/secure-sv1/icons/lab.png" alt="" style="width:28px;height:28px;object-fit:contain">
-            </div>
+            <div class="features__icon" aria-hidden="true">🛠️</div>
             <h3 class="features__title" data-i18n-key="feat_4_t">ควบคุมง่าย</h3>
             <p class="features__desc" data-i18n-key="feat_4_d">ติดตาม <strong>Cu/Zn/Free CN</strong>, <strong>°Bé 12–15</strong> ปรับเติมตรงไปตรงมา</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://img5.pic.in.th/file/secure-sv1/icons/toolbox.png" alt="" style="width:28px;height:28px;object-fit:contain">
-            </div>
+            <div class="features__icon" aria-hidden="true">📈</div>
             <h3 class="features__title" data-i18n-key="feat_5_t">ยืดหยุ่นต่ออุปกรณ์</h3>
             <p class="features__desc" data-i18n-key="feat_5_d">ใช้ได้กับถังเหล็กบุ/พลาสติก ระบบกวนและกรองมาตรฐาน</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://img5.pic.in.th/file/secure-sv1/icons/shield.png" alt="" style="width:28px;height:28px;object-fit:contain">
-            </div>
+            <div class="features__icon" aria-hidden="true">✨</div>
             <h3 class="features__title" data-i18n-key="feat_6_t">ตกแต่งทนหมอง</h3>
             <p class="features__desc" data-i18n-key="feat_6_d">รองรับขั้นตอนกันหมองหลังชุบ เพื่อยืดอายุการใช้งาน</p>
           </article>
