--- a/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
@@ -246,49 +246,37 @@
         <div class="features__grid">
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://source.unsplash.com/80x80/?shield,safety" alt="Safety icon">
-            </div>
+            <div class="features__icon" aria-hidden="true">🌿</div>
             <h3 class="features__title" data-i18n-key="feat_1_t">ไม่มีไซยาไนด์</h3>
             <p class="features__desc" data-i18n-key="feat_1_d">ลดความเสี่ยงด้าน EHS และภาระบำบัดน้ำเสีย เมื่อเทียบกับระบบ CN</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://source.unsplash.com/80x80/?color,gradient" alt="Tone control icon">
-            </div>
+            <div class="features__icon" aria-hidden="true">📏</div>
             <h3 class="features__title" data-i18n-key="feat_2_t">คุมโทนกว้าง</h3>
             <p class="features__desc" data-i18n-key="feat_2_d">ปรับสีทอง–โรสโกลด์ด้วยตัวปรับสี เงื่อนไขชุบ และอัตราส่วน Cu:Zn</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://source.unsplash.com/80x80/?speed,bolt" alt="Fast deposition icon">
-            </div>
+            <div class="features__icon" aria-hidden="true">📈</div>
             <h3 class="features__title" data-i18n-key="feat_3_t">ฟิล์มขึ้นเร็ว</h3>
             <p class="features__desc" data-i18n-key="feat_3_d">ชุบติดไว การเข้าซอกดี เหมาะสายการผลิตต่อเนื่อง</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://source.unsplash.com/80x80/?thermometer,heat" alt="Temperature icon">
-            </div>
+            <div class="features__icon" aria-hidden="true">🎯</div>
             <h3 class="features__title" data-i18n-key="feat_4_t">ช่วงอุณหภูมิกว้าง</h3>
             <p class="features__desc" data-i18n-key="feat_4_d">ทำงานได้ตั้งแต่อุณหภูมิห้อง—แนะนำ ~55 °C เพื่อเสถียรภาพของบ่อ</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://source.unsplash.com/80x80/?factory,tools" alt="Equipment icon">
-            </div>
+            <div class="features__icon" aria-hidden="true">📶</div>
             <h3 class="features__title" data-i18n-key="feat_5_t">ยืดหยุ่นต่ออุปกรณ์</h3>
             <p class="features__desc" data-i18n-key="feat_5_d">ใช้ได้ทั้งแร็ค/บาร์เรล ระบบกวน/กรองมาตรฐาน ปรับใช้ได้ง่าย</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://source.unsplash.com/80x80/?brass,metal" alt="Brass finish icon">
-            </div>
+            <div class="features__icon" aria-hidden="true">✨</div>
             <h3 class="features__title" data-i18n-key="feat_6_t">ผิวสวยพร้อมตกแต่ง</h3>
             <p class="features__desc" data-i18n-key="feat_6_d">ผิวละเอียด เงา/กึ่งเงา รองรับกระบวนการกันหมองหลังชุบ</p>
           </article>
