upload all files

--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Acid Zinc — แอมโมเนียมคลอไรด์ vs โพแทสเซียมคลอไรด์ | ACIDZINC 99">
   <meta property="og:description" content="ฟีเจอร์ 6 ข้อ สูตร Make‑up สภาวะเดินงาน อัตราส่วนบ่อ การเติม การแก้ปัญหา การจัดการเหล็ก และความปลอดภัย">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingacidzinc/index.html">
-  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/zinc-acid-hero.jpg">
+  <meta property="og:image" content="https://i.imgur.com/rn66CQu.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,7 +31,7 @@
     "@type": "Product",
     "name": "ACIDZINC 99 — Acid Zinc Plating System",
     "description": "Acid zinc (ammonium vs potassium chloride) comparison with full guide for ACIDZINC 99: features, make‑up, operating window, additions, troubleshooting, iron control, safety.",
-    "image": "https://img5.pic.in.th/file/secure-sv1/zinc-acid-hero.jpg",
+    "image": "https://i.imgur.com/rn66CQu.jpeg",
     "brand": {"@type": "Brand","name": "Baume Chemical"},
     "category": "Zinc Plating",
     "inLanguage": "th",
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/zinc-acid-hero.jpg"/>
+  <link rel="preload" as="image" href="https://i.imgur.com/rn66CQu.jpeg"/>
 
   <style>
     :root{
@@ -98,7 +98,7 @@
     body.no-scroll{position:fixed;width:100%}
 
     /* ===== Hero ===== */
-    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://img5.pic.in.th/file/secure-sv1/zinc-acid-hero.jpg') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
+    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://i.imgur.com/rn66CQu.jpeg') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
     .hero h1{margin:6px 0 10px;font-weight:800;font-size:clamp(24px,3.8vw,40px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
     .back-chip{position:absolute;top:calc(var(--header-h) + 10px);left:16px;z-index:1;display:inline-flex;align-items:center;gap:6px;padding:8px 12px;border-radius:999px;font-weight:800;text-decoration:none;background:#fff;border:1px solid rgba(2,8,20,.08);color:#0f172a;box-shadow:var(--shadow-1)}
