upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/brassplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Brass Cyanide — น้ำยาชุบทองเหลืองไซยาไนด์</h1>
       <p data-i18n-key="hero_tagline">ภาพรวมกระบวนการ องค์ประกอบสารเคมี หน้าต่างการทำงาน สูตร Make-up และแนวทางความปลอดภัย พร้อมการ์ดจุดเด่น 6 ข้อ</p>
