--- a/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/brassplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Brass (Non-Cyanide): น้ำยาชุบทองเหลืองไร้ไซยาไนด์</h1>
       <p data-i18n-key="hero_tagline">ปลอดไซยาไนด์ คุมโทนกว้าง ชุบได้ทั้งแร็ค/บาร์เรล พร้อมสเปกการเดินงาน การผสม และความปลอดภัย</p>
