--- a/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
+++ b/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
@@ -211,7 +211,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/copperplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">CopperBrite 900 — Bright Acid Copper</h1>
       <p data-i18n-key="hero_tagline">เงาสูงทั่วช่วงกระแส Leveling ดี สร้างความหนาเร็ว เหมาะงานตกแต่ง/PCB พร้อมพารามิเตอร์ & Make-up</p>
