--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -209,7 +209,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/copperplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Alkaline Copper Strike — ชั้นรองพื้นทองแดง</h1>
       <p data-i18n-key="hero_tagline">ป้องกันปฏิกิริยาแทนที่บนเหล็ก/ซิงค์ ยึดเกาะดี เข้าซอกสูง ผิวด้านบาง 1–3 µm รองรับ Acid Copper/Ni/Cr ต่อ</p>
