--- a/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
@@ -211,7 +211,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/copperplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Copperlume 220 — Non-Cyanide Alkaline Copper</h1>
       <p data-i18n-key="hero_tagline">ชั้นรองพื้นทองแดงปลอดไซยาไนด์ ยึดเกาะดี เข้าซอกสูง คุมงานง่าย เหมาะเหล็ก/ซิงค์ไดคาสต์ พร้อมสูตร & พารามิเตอร์ครบ</p>
