--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -206,7 +206,7 @@
 
   <!-- ===== Hero ===== -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">317M — ไวท์บรอนซ์ปลอดไซยาไนด์</h1>
       <p data-i18n-key="hero_tagline">สีขาวคล้ายแพลทินัม/เงิน เงาสว่าง สม่ำเสมอ ฟิล์มแข็ง ~600 HV รองรับ Rack/Barrel และลดภาระ EHS</p>
