--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
@@ -203,7 +203,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">EPA 2020: แลคเกอร์ไฟฟ้าอะคริลิค (Acrylic E-coat)</h1>
       <p data-i18n-key="hero_tagline">ฟิล์มใสสม่ำเสมอ คุมความหนาด้วยไฟฟ้า เหมาะงานตกแต่ง/กันสนิม พร้อมสเปกเดินบ่อ ขั้นตอน และการบำรุงรักษา</p>
