--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
@@ -206,7 +206,7 @@
 
   <!-- ===== Hero ===== -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">LT 3405 — โพลียูรีเทน E-coat (Electrodeposition Polyurethane)</h1>
       <p data-i18n-key="hero_tagline">ฟิล์มใสสม่ำเสมอ แข็ง ทนสารเคมี/ความชื้น คุมความหนาด้วยกระแส — เหมาะงานเครื่องประดับ ฮาร์ดแวร์ และยานยนต์</p>
