--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -203,7 +203,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">BLACK NICKEL SALT — เกลือนิเกิ้ลดำ</h1>
       <p data-i18n-key="hero_tagline">สารตั้งต้นสำหรับชุบนิกเกิลดำ: หลักการ คุณสมบัติ พารามิเตอร์ วิธีผสม และคำแนะนำการใช้งาน</p>
