--- a/products/platingcoating/nickelplating/troubleshootingennickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingennickel/index.html
@@ -180,7 +180,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1>EN Nickel (Electroless Nickel) — NI-508</h1>
       <p>สม่ำเสมอทั่วทั้งชิ้นงานแม้รู/ซอกลึก ทนกัดกร่อน แข็งได้สูงหลังอบ เหมาะชิ้นส่วนแม่นยำ ยานยนต์ วาล์ว/ปั๊ม อิเล็กทรอนิกส์ และเครื่องมือแพทย์</p>
