--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">BASn 4140: น้ำยาชุบดีบุกเงา</h1>
       <p data-i18n-key="hero_tagline">สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้ Tin Anode 99.9%</p>
