--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -201,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/zincplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">ซิงค์กรด: แอมโมเนีย vs โพแทสเซียม — ระบบ ACIDZINC 99</h1>
       <p data-i18n-key="hero_tagline">สรุปข้อดี/ข้อจำกัดของคลอไรด์ตัวนำ (NH4Cl/KCl) พร้อมคู่มือเดินบ่อเต็มรูปแบบ: ฟีเจอร์ 6 ข้อ สูตร Make‑up เงื่อนไขเดินงาน การเติม/แก้ปัญหา และความปลอดภัย</p>
