--- a/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
@@ -201,7 +201,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/zincplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">การชุบซิงค์ไซยาไนด์ — Brightener Zinc 111B</h1>
       <p data-i18n-key="hero_tagline">หลักการทำงาน จุดเด่น 6 ข้อ สูตร/สัดส่วนบ่อ ข้อกำหนดถัง การเตรียมบ่อ การเติม 111B แนวทางแก้ปัญหา และความปลอดภัย</p>
