--- a/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
+++ b/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
@@ -201,7 +201,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">การชุบโครเมียม & การชุบฮาร์ดโครม</h1>
       <p data-i18n-key="hero_tagline">สรุปความแตกต่าง พารามิเตอร์เดินบ่อ อุปกรณ์ และตัวช่วย Decorex สำหรับพื้นที่กระแสต่ำ (LCD)</p>
