--- a/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
@@ -198,7 +198,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Satin Nickel — นิกเกิลซาติน</h1>
       <p data-i18n-key="hero_tagline">ผิวด้าน/กึ่งด้าน สวยนุ่มนวล ลดเงาสะท้อน พร้อมสูตร Make-up สภาวะเดินงาน และการควบคุมบ่อ</p>
