--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -198,7 +198,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/zincplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">ชุบซิงค์แบบไม่ใช้ไซยาไนด์ (Cyanide-free Zinc Plating)</h1>
       <p data-i18n-key="hero_tagline">ปลอดภัยต่อผู้ปฏิบัติงาน/สิ่งแวดล้อม พร้อมสรุปประเภทกรด–ด่าง สูตรเดินบ่อ พารามิเตอร์ ฟีเจอร์ 6 ข้อ การเติมบ่อ และแนวทางแก้ปัญหา</p>
