upload all files

--- a/products/passivation/blue-passivation-on-zinc.html
+++ b/products/passivation/blue-passivation-on-zinc.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/passivation/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Tri Blue — สีฟ้า (สีขาว) โครม 3 บนงานซิงค์</h1>
       <p data-i18n-key="hero_tagline">ชั้นฟิล์ม Cr3+ สีฟ้าอมเงิน ปลอดภัยกว่า (RoHS/REACH) ทนพ่นน้ำเกลือ ≥96 ชม. พร้อมช่วงการทำงาน วิธีใช้ การควบคุม pH และการแก้ปัญหาเบื้องต้น</p>
