--- a/products/passivation/troubleshootinghexavalentchromeblack.html
+++ b/products/passivation/troubleshootinghexavalentchromeblack.html
@@ -175,7 +175,7 @@
   <!-- ===== HERO ===== -->
   <section class="hero" aria-label="Chromate Black 80 hero">
     <div class="hero-inner">
-      <a class="back-home" href="/index.html" onclick="if(history.length>1){history.back();return false;}" data-i18n-key="back_home">← กลับหน้าแรก</a>
+      <a class="back-home" href="https://www.baumechemical.com/products/passivation/index.html" onclick="if(history.length>1){history.back();return false;}" data-i18n-key="back_home">← กลับหน้าแรก</a>
 
       <div class="badges">
         <span class="badge" data-i18n-key="badge1">Cr(VI) Black</span>
