--- a/products/passivation/yellow-passivation-on-zinc.html
+++ b/products/passivation/yellow-passivation-on-zinc.html
@@ -208,7 +208,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/passivation/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Tri Yellow BM — สีเหลืองโครม 3 (Trivalent Chromate)</h1>
       <p data-i18n-key="hero_tagline">โครเมทสีเหลืองทอง Cr3+ สวยงาม ปลอดภัยกว่า (RoHS/REACH) ทนสนิมขาว ~72–100 ชม. ปรับเฉดได้ด้วยเวลา</p>
