upload all files

--- a/products/passivation/troubleshootingtrivalentchromeblack.html
+++ b/products/passivation/troubleshootingtrivalentchromeblack.html
@@ -219,7 +219,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/passivation/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">BZ 471 — ซิงค์ดำโครม 3 (Trivalent Black Chromate)</h1>
       <p data-i18n-key="hero_tagline">ฟิล์มโครเมียมไตรวาเลนต์ (Cr3+) สีดำเงา ปลอดภัยกว่า (RoHS/REACH) ทนสนิมขาว ทั้งงานถังกลิ้งและถังแขวน พร้อมช่วงการใช้งาน วิธีใช้ pH และการซีล</p>
